--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 @import url("colors.css");
 
+h1 {
+    font-size: 3rem;   
+    font-weight: 300;  
+    margin: 0.5rem 0; 
+}
+  
+  h2 {
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 0.5rem 0;
+  }
+  
+
 body {
     font-family: 'Fira Code';
     background-color: var(--mocha-base);
@@ -62,13 +75,13 @@ main {
     margin-top: 3rem;
 }
 
-.aboutme-card {
+.aboutme-card,
+.skills-card {
     background: var(--mocha-crust);
     border-radius: 1rem;
     padding: 2rem;
     width: 35rem;
     height: 52rem;
-    text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.7s ease, transform 0.8s ease;
     outline: solid;
@@ -76,6 +89,7 @@ main {
     outline-color: var(--mocha-blue);
 }
 
+.skills-card:hover,
 .aboutme-card:hover {
     box-shadow: 0 0 36px var(--mocha-blue);
     transform: scale(1.1);
@@ -84,7 +98,7 @@ main {
         color: var(--mocha-sapphire);
     }
 
-    .name-box {
+    .title-box {
         color: var(--mocha-sapphire)
     }
 
@@ -93,17 +107,10 @@ main {
     }
 }
 
-.name-pronoun-container {
-    display: flex;
-    justify-content: left;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    align-items: flex-end;
-}
-
-.name-box {
+.skills-title-box,
+.aboutme-title-box {
     height: 2rem;
-    width: 15rem;
+    width: 8rem;
     background: var(--mocha-base);
     border-radius: 0.5rem;
     padding: 0.5rem;
@@ -116,21 +123,8 @@ main {
     transition: color 0.7s ease;
 }
 
-.pronoun-box {
-    height: 1.5rem;
-    width: 6rem;
-    background: var(--mocha-base);
-    border-radius: 0.4rem;
-    padding: 0.25rem 0.5rem; 
-    font-size: 0.9rem; 
-    color: var(--washed-sapphire);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: color 0.7s ease;
-}
-
-.card-ascii-art {
+.skills-card-ascii-art,
+.aboutme-card-ascii-art {
     width: 100%;
     height: 18rem;
     background: var(--mocha-base);
@@ -147,18 +141,9 @@ main {
 }
 
 .about-me {
-    margin-top: 0.2rem;
-    margin-left: 15%;
-    text-align: left;
-    color: var(--mocha-pink);
-    white-space: pre;
-    display: block;
-    line-height: 1;
-}
-
-.skills {
-    margin-top: 0.2rem;
-    margin-right: 15%;
-    text-align: right;
-    color: var(--mocha-pink);
+    text-align: center;
+    font-size: 1.1rem;
+    align-items: left;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
