--- a/styles.css
+++ b/styles.css
@@ -69,17 +69,17 @@ main {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    margin-top: 3vh;
+    margin-top: 3rem;
 }
 
 .aboutme-card,
 .skills-card {
     z-index: 10;
     background: var(--mocha-crust);
-    border-radius: 15px;
-    padding: 17px;
-    width: 35vh;
-    height: 50vh;
+    border-radius: 1rem;
+    padding: 1.2rem;
+    width: 35rem;
+    height: 50rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: 
         box-shadow 0.7s ease, 
@@ -111,9 +111,9 @@ main {
     height: 2rem;
     width: 8rem;
     background: var(--mocha-base);
-    border-radius: 10px;
+    border-radius: 0.5rem;
     margin-bottom: 1vh;
-    padding: 8px;
+    padding: 0.5rem;
     font-size: 1.4rem;
     font-weight: 400;
     color: var(--washed-sapphire);
@@ -128,16 +128,16 @@ main {
     width: 100%;
     height: 18rem;
     background: var(--mocha-base);
-    border-radius: 10px;
-    margin-bottom: 1vh;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
     margin-top: 0;
-    text-align: center;
 }
 
 .doomguy {
     color: var(--washed-mauve);
-    font-size: small;
-    padding: 17px;
+    font-size: 8.5px;
+    padding: 30px;
+    margin-left: -10px;
     transition: color 0.7s ease;
 }
 
@@ -145,6 +145,6 @@ main {
     text-align: center;
     font-size: 1.1rem;
     align-items: left;
-    padding-left: 0.4vw;
-    padding-right: 0.4vw;
+    padding-left: 0.5;
+    padding-right: 0.5rem;
 }
