--- a/styles.css
+++ b/styles.css
@@ -66,56 +66,50 @@ main {
 
 .cards-container {
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    row-gap: 5px;
     margin-top: 3rem;
 }
 
 .aboutme-card,
-.skills-card,
-.projects-card {
+.skills-card {
+    z-index: 10;
     background: var(--mocha-crust);
     border-radius: 1rem;
     padding: 1.2rem;
-    width: 28vh;
-    height: 40vh;
+    width: 35rem;
+    height: 50rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: 
         box-shadow 0.7s ease, 
         transform 0.8s ease, 
-        filter 0.5s ease,
-        top 0.8s ease,
-        left 0.8s ease;
+        filter 0.5s ease;
     outline: solid;
     outline-width: 5px;
     outline-color: var(--mocha-blue);
 }
 
 .skills-card:hover,
-.aboutme-card:hover,
-.projects-card:hover {
+.aboutme-card:hover {
     box-shadow: 0 0 40px var(--mocha-blue);
     transform: scale(1.1);
 }
 
 .skills-card:hover .title-box,
-.aboutme-card:hover .title-box,
-.projects-card:hover.title-box {
+.aboutme-card:hover .title-box {
     color: var(--mocha-sapphire);
 }
 
-.skills-card:hover .cacodemon,
-.aboutme-card:hover .doomguy,
-.projects-card:hover .slayer-mark {
-    color: var(--mocha-red);
+.skills-card:hover .doomguy,
+.aboutme-card:hover .doomguy {
+    color: var(--mocha-mauve);
 }
 
 .skills-title-box,
-.aboutme-title-box,
-.projects-title-box {
-    height: 5%;
-    width: 30%;
+.aboutme-title-box {
+    height: 2rem;
+    width: 8rem;
     background: var(--mocha-base);
     border-radius: 0.5rem;
     margin-bottom: 1vh;
@@ -130,47 +124,26 @@ main {
 }
 
 .skills-card-ascii-art,
-.aboutme-card-ascii-art,
-.projects-card-ascii-art {
+.aboutme-card-ascii-art {
     width: 100%;
-    height: 35%;
+    height: 18rem;
+    background: var(--mocha-base);
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     margin-top: 0;
 }
 
 .doomguy {
-    color: var(--washed-red);
-    font-size: 43%;
-    align-self: center;
-    padding-top: 0.5rem;
-    padding-left: 0.7rem;
+    color: var(--washed-mauve);
+    font-size: 8.5px;
+    padding: 30px;
+    margin-left: -10px;
     transition: color 0.7s ease;
 }
 
-.cacodemon {
-    color: var(--washed-red);
-    font-size: 30%;
-    align-self: center;
-    padding-top: 0.5rem;
-    padding-left: 6.5rem;
-    transition: color 0.7s ease;
-}
-
-.slayer-mark {
-    color: var(--washed-red);
-    font-size: 47%;
-    align-self: center;
-    padding-top: 0.1rem;
-    padding-left: 8.5rem;
-    transition: color 0.7s ease;
-}
-
-.about-me,
-.skills,
-.projects {
+.about-me {
     text-align: center;
-    font-size:85%;
+    font-size: 1.1rem;
     align-items: left;
     padding-left: 0.5;
     padding-right: 0.5rem;
