--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,16 @@
 @import url("colors.css");
 
 h1 {
-    font-size: 3rem;   
+    font-size: 3vw;
     font-weight: 300;  
     margin: 0.5rem 0; 
 }
-  
-  h2 {
-    font-size: 2rem;
+
+h2 {
+    font-size: 2.5vw;
     font-weight: 300;
     margin: 0.5rem 0;
-  }
-  
+}
 
 body {
     font-family: 'Fira Code';
@@ -20,6 +19,14 @@ body {
     color: var(--mocha-text);
     height: 100vh;
     margin: 0;
+}
+
+.theme-switch {
+    margin: 10px;
+    position: fixed;
+    background: var(--mocha-crust);
+
+    z-index: 1000;
 }
 
 main {
@@ -33,145 +40,48 @@ main {
     align-items: center;
     text-align: center; 
     color: var(--mocha-pink);
-    padding-top: 5vh;
     transition: filter 0.5s ease;
-
+    height: 100vh;
 }
-.title {
-    margin-bottom: 0.1;
+
+.title, .subtitle {
     display: inline-block;
     overflow: hidden;
+    border-right: 0.05em solid var(--mocha-pink);
     white-space: nowrap;
-    font-size: 8rem;
+    margin: 0 auto;
+    font-size: 8vw;
     letter-spacing: 0.01rem;
-    animation: typing 1.6s steps(13, end) forwards;
-    width: 0; 
+    animation: 
+        typing 1.6s steps(13, end) forwards,
+        blink-caret .75s step-end infinite;
+    width: 0;
 }
 
 .subtitle {
-    margin-bottom: 1rem;
-    display: inline-block; 
-    overflow: hidden;
-    white-space: nowrap;
-    font-size: 2rem;
-    letter-spacing: 0.01rem;
-    animation: typing 1.6s steps(13, end) forwards 1.5s;
-    width: 0;
+    font-size: 2vw;
+    animation: 
+        typing 1.6s steps(13, end) forwards 1.5s,
+        blink-caret .75s step-end infinite;
 }
+
 
 @keyframes typing {
     from { width: 0; }
     to { width: 13ch; }
 }
 
-.cards-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    row-gap: 5px;
-    margin-top: 3rem;
+@keyframes blink-caret {
+    from, to { border-right-color: transparent; }
+    50% { border-color: var(--mocha-pink); }
 }
 
-.aboutme-card,
-.skills-card,
-.projects-card {
-    background: var(--mocha-crust);
-    border-radius: 1rem;
-    padding: 1.2rem;
-    width: 28vh;
-    height: 40vh;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: 
-        box-shadow 0.7s ease, 
-        transform 0.8s ease, 
-        filter 0.5s ease,
-        top 0.8s ease,
-        left 0.8s ease;
-    outline: solid;
-    outline-width: 5px;
-    outline-color: var(--mocha-blue);
+.container {
+    width: 80vw;
+    height: 80vh;
+    background-color: var(--mocha-crust);
+    position: absolute;
+    left: 50%; 
+    transform: translate(-50%);
 }
 
-.skills-card:hover,
-.aboutme-card:hover,
-.projects-card:hover {
-    box-shadow: 0 0 40px var(--mocha-blue);
-    transform: scale(1.1);
-}
-
-.skills-card:hover .title-box,
-.aboutme-card:hover .title-box,
-.projects-card:hover.title-box {
-    color: var(--mocha-sapphire);
-}
-
-.skills-card:hover .cacodemon,
-.aboutme-card:hover .doomguy,
-.projects-card:hover .slayer-mark {
-    color: var(--mocha-red);
-}
-
-.skills-title-box,
-.aboutme-title-box,
-.projects-title-box {
-    height: 5%;
-    width: 30%;
-    background: var(--mocha-base);
-    border-radius: 0.5rem;
-    margin-bottom: 1vh;
-    padding: 0.5rem;
-    font-size: 1.4rem;
-    font-weight: 400;
-    color: var(--washed-sapphire);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: color 0.7s ease;
-}
-
-.skills-card-ascii-art,
-.aboutme-card-ascii-art,
-.projects-card-ascii-art {
-    width: 100%;
-    height: 35%;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-    margin-top: 0;
-}
-
-.doomguy {
-    color: var(--washed-red);
-    font-size: 43%;
-    align-self: center;
-    padding-top: 0.5rem;
-    padding-left: 0.7rem;
-    transition: color 0.7s ease;
-}
-
-.cacodemon {
-    color: var(--washed-red);
-    font-size: 30%;
-    align-self: center;
-    padding-top: 0.5rem;
-    padding-left: 6.5rem;
-    transition: color 0.7s ease;
-}
-
-.slayer-mark {
-    color: var(--washed-red);
-    font-size: 47%;
-    align-self: center;
-    padding-top: 0.1rem;
-    padding-left: 8.5rem;
-    transition: color 0.7s ease;
-}
-
-.about-me,
-.skills,
-.projects {
-    text-align: center;
-    font-size:85%;
-    align-items: left;
-    padding-left: 0.5;
-    padding-right: 0.5rem;
-}
