--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,41 @@ body {
     color: var(--mocha-text);
     height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-main {
-    font-weight: 300;
+a {
+    color: var(--mocha-blue);
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+a:hover {
+    color: var(--mocha-sapphire);
+    text-decoration: underline;
+}
+
+a:visited {
+    color: var(--mocha-lavender);
+}
+
+.top-bar {
+    position: fixed;
+    background-color: var(--mocha-mantle);
+    margin-top: 10px;
+    height: 3%;
+    width: 95%;
+    max-width: 3000px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.top-bar a {
+    margin: 0 15px;
 }
 
 .site-header {
@@ -53,7 +84,7 @@ main {
 .subtitle {
     font-size: 2vw;
     animation: 
-        typing 1.6s steps(13, end) forwards 1.5s,
+        typing 1.6s steps(13, end) forwards 2s,
         blink-caret .75s step-end infinite;
 }
 
@@ -71,30 +102,118 @@ main {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: row;
+    align-items: center; 
+    background-color: var(--mocha-mantle);
+    flex-direction: column; 
     gap: 1rem;
     width: 80vw;
     height: 80vh;
     position: absolute;
-    left: 50%; 
-    transform: translate(-50%);
+    left: 50%;
+    transform: translateX(-50%);
+    padding-bottom: 60px;
 }
 
-.about-me,
- .skills,
- .projects,
- .tech-stack {
+.subcontainer {
+    background-color: var(--mocha-base);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    height: 100%;
+    width: 90%;
+}
+
+.about-me-container {
+    background-color: var(--mocha-crust);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 80%;
-    width: 20%;
-    border-radius: 10px;
-    margin: 1rem 0;
     gap: 1rem;
-    padding: 2rem;
+    height: 80%;
+    width: 50%;
+    text-align: left;
+}
+
+.tech-stack-skills-container {
+    background-color: var(--mocha-crust);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 80%;
+    width: 40%;
+    text-align: left;
+}
+
+.tech-stack {
+    background-color: var(--mocha-mantle);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    height: 50%;
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.tech-stack-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 16%;
+    height: 130%; 
     background-color: var(--mocha-base);
+    border: 0.5px solid var(--mocha-surface0);
+    border-radius: 8px;
+    padding: 5px;
+    transition: transform 1s ease, border 1s ease, background-color 1s ease;
+}
+
+.tech-stack-item img {
+    width: 60%;
+    height: 60%;
+    object-fit: contain;
+}
+
+.tech-name {
+    margin-top: 5px;
+    font-size: 100%;
+    color: var(--mocha-text);
+}
+
+.tech-stack-item:hover {
+    transform: scale(1.3);
+    border: 0.5px solid var(--mocha-mauve);
+    background-color: var(--mocha-surface0);
 }
 
 
+.skills {
+    background-color: var(--mocha-mantle);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 50%;
+    width: 100%;
+}
+
+.projects-container {
+    background-color: var(--mocha-base);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 35%;
+    width: 80%; 
+}
+
+.title-about-me,
+.title-skills,
+.title-projects,
+.title-tech-stack {
+    text-decoration: underline;
+    font-size: clamp(1rem, 1.2vw, 2rem);
+    font-weight: 400;
+    margin: 0;
+}
