--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ ul li:last-child {
     background-color: var(--mocha-mantle);
     margin-top: 10px;
     height: clamp(40px, 4vh, 60px);
-    width: 95%;
-    max-width: 3000px;
+    width: 99.5%;
+    margin: 10px;
     border-radius: 10px;
     text-align: center;
     display: flex;
@@ -224,8 +224,9 @@ ul li:last-child {
     background-color: var(--mocha-base);
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1rem;
     height: 35%;
     width: 80%; 
@@ -233,7 +234,7 @@ ul li:last-child {
 
 .project-button {
     background-color: var(--mocha-base);
-    width: 22%;
+    width: 20%;
     aspect-ratio: 1/1.2;
     padding: 10px 20px;
     border: none;
