--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1, h2 {
 
 p {
     line-height: 1.5;
-    font-size: clamp(1rem, 1.5vw, 1.4rem);
+    font-size: clamp(1rem, 1.5vw, 1.3rem);
 }
 
 body {
@@ -60,8 +60,10 @@ ul li:last-child {
     background-color: var(--mocha-mantle);
     margin-top: 10px;
     height: clamp(40px, 4vh, 60px);
-    width: 99.5%;
+    width: 99%;
+    gap:1px;
     margin: 10px;
+    padding-left: 5px;
     border-radius: 10px;
     text-align: center;
     display: flex;
@@ -69,7 +71,7 @@ ul li:last-child {
 }
 
 .top-bar a {
-    margin: 0 15px;
+    margin-left: 5px;
 }
 
 .site-header {
@@ -119,7 +121,6 @@ ul li:last-child {
     display: flex;
     justify-content: center;
     align-items: center; 
-    background-color: var(--mocha-mantle);
     flex-direction: column; 
     gap: 1rem;
     width: 80vw;
@@ -133,7 +134,6 @@ ul li:last-child {
 }
 
 .subcontainer {
-    background-color: var(--mocha-base);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -144,7 +144,6 @@ ul li:last-child {
 }
 
 .about-me-container {
-    background-color: var(--mocha-crust);
     display: flex;
     flex-direction: column;
     align-self: start;
@@ -152,11 +151,9 @@ ul li:last-child {
     height: 80%;
     width: 50%;
     text-align: left;
-    font-size: clamp(1rem, 1.5vw, 1.3rem);
 }
 
 .tech-stack-skills-container {
-    background-color: var(--mocha-crust);
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -166,11 +163,10 @@ ul li:last-child {
 }
 
 .tech-stack {
-    background-color: var(--mocha-mantle);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     grid-row-gap: 0.8rem;
-    grid-column-gap: 0.8rem;
+    grid-column-gap: 0.3rem;
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
@@ -183,7 +179,7 @@ ul li:last-child {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 85%;
+    width: 70%;
     aspect-ratio: 1/1;
     background-color: var(--mocha-base);
     border: 0.5px solid var(--mocha-surface0);
@@ -212,7 +208,6 @@ ul li:last-child {
 
 
 .skills {
-    background-color: var(--mocha-mantle);
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -221,7 +216,6 @@ ul li:last-child {
 }
 
 .projects-container {
-    background-color: var(--mocha-base);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -234,7 +228,7 @@ ul li:last-child {
 
 .project-button {
     background-color: var(--mocha-base);
-    width: 20%;
+    width: 10%;
     aspect-ratio: 1/1.2;
     padding: 10px 20px;
     border: none;
@@ -242,6 +236,7 @@ ul li:last-child {
     cursor:pointer;
     transition: background-color 0.3s ease;
     text-align: center;
+    font-size: clamp(0.8rem, 1vw, 1.2rem);
     border: 0.5px solid var(--mocha-surface0);
     transition: transform 1s ease, border 1s ease, background-color 1s ease, outline 1s ease;
 }
@@ -259,16 +254,18 @@ ul li:last-child {
 }
 
 #skills-list,
-#about-me {
+#about-me-text {
     color: var(--mocha-subtext0);
-    font-size: clamp(0.8rem, 0.8vw, 1.2rem);
+    font-size: clamp(0.8rem, 1vw, 1.2rem);
 }
 
-.title-about-me,
-.title-skills,
-.title-projects,
-.title-tech-stack {
-    text-decoration: underline;
+#title-about-me,
+#title-skills,
+#title-projects,
+#title-tech-stack {
+    color: var(--mocha-sapphire);
+    background-color: var(--mocha-crust);
+    border-radius: 10px;
     font-size: clamp(1rem, 1.5vw, 2.5rem);
     font-weight: 400;
     margin: 0;
