--- a/styles.css
+++ b/styles.css
@@ -22,19 +22,68 @@ body {
     align-items: center;
 }
 
-a {
+a,
+#contact-button {
     color: var(--mocha-blue);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
-a:hover {
+a:hover,
+#contact-button:hover {
     color: var(--mocha-sapphire);
     text-decoration: underline;
 }
 
-a:visited {
+#mailto-link {
+    color: var(--mocha-subtext1);
+}
+
+#mailto-link:hover {
     color: var(--mocha-lavender);
+}
+
+#contact-title {
+    font-size: clamp(1.5rem, 2.5vw, 1.8rem);
+    color: var(--mocha-sapphire);
+}
+
+.popup {
+    display: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 500;
+}
+
+.popup-content {
+    display: hidden;
+    background: var(--mocha-base);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: left;
+    min-width: 250px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+    color: var(--mocha-red);
+    font-weight: bold;
+    background: none;
+    border: none;
+    font-size: 16px;
 }
 
 ul {
@@ -60,7 +109,8 @@ ul li:last-child {
     background-color: var(--mocha-mantle);
     margin-top: 10px;
     height: clamp(40px, 4vh, 60px);
-    width: 99%;
+    font-size: clamp(0.8rem, 1.5vw, 1.2rem);
+    width: 98.5%;
     gap:1px;
     margin: 10px;
     padding-left: 5px;
