--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ a,
 
 a:hover,
 #contact-button:hover,
-.popup-title:hover {
+.popup-gitrepo-link:hover {
     color: var(--mocha-sapphire);
     text-decoration: underline;
     cursor: pointer;
@@ -72,6 +72,12 @@ a:hover,
 .popup-title {
     font-size: clamp(1.5rem, 2.5vw, 1.8rem);
     color: var(--mocha-sapphire);
+}
+
+.popup-gitrepo-link {
+    font-size: clamp(0.8rem, 1vw, 1.1rem);
+    color: var(--mocha-sapphire);
+    margin-bottom: 10px;
 }
 
 .popup-subtitle {
@@ -249,32 +255,29 @@ ul li:last-child {
 .tech-stack {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    grid-row-gap: 0.8rem;
-    grid-column-gap: 0.3rem;
+    grid-row-gap: 0.5rem;
+    grid-column-gap: 0.5rem;
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
 }
 
-
-
 .tech-stack-item {
     display: flex;
+    background-color: var(--mocha-base);
+    border-radius: 8px;
+    padding: 10px;
+    border: solid 0.5px var(--mocha-surface0);
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 70%;
     aspect-ratio: 1/1;
-    background-color: var(--mocha-base);
-    border: 0.5px solid var(--mocha-surface0);
-    border-radius: 8px;
-    padding: 5px;
-    transition: transform 1s ease, border 1s ease, background-color 1s ease;
 }
 
 .tech-stack-item img {
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 70%;
     object-fit: contain;
 }
 
@@ -284,11 +287,6 @@ ul li:last-child {
     color: var(--mocha-text);
 }
 
-.tech-stack-item:hover {
-    transform: scale(1.3);
-    border: 0.5px solid var(--mocha-mauve);
-    background-color: var(--mocha-surface0);
-}
 
 
 .skills {
