--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,8 @@ a:hover,
 }
 
 #smallfetch-container {
-    max-width: fit-content;
+    max-width: 3000px;
+    min-width: fit-content;
     max-height: fit-content;
     display: flex;
     flex-direction: column;    
@@ -63,6 +64,11 @@ a:hover,
 #tech-stack-used {
     display: flex;
     flex-direction: column;
+}
+
+.smallfetch-popup img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .project-desc {
@@ -271,7 +277,7 @@ ul li:last-child {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70%;
+    max-width: 70%;
     aspect-ratio: 1/1;
 }
 
