--- a/styles.css
+++ b/styles.css
@@ -104,21 +104,19 @@ a:hover,
 
 .popup {
   font-size: clamp(0.8rem, 1vw, 1.1rem);
-  display: hidden;
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 500;
 }
 
 .popup-content {
-  display: hidden;
   background: var(--mocha-mantle);
   border: 0.5px solid var(--mocha-surface0);
   border-radius: 8px;
